[gd_scene load_steps=8 format=3 uid="uid://coe1q8ioluayu"]

[ext_resource type="Texture2D" uid="uid://hooto88yo71f" path="res://Weapon/Sword/WeaponTest.png" id="1_femuq"]
[ext_resource type="Script" path="res://Weapon/Sword/Sword.gd" id="1_lsqwb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3sbo"]
size = Vector2(106, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wm5bn"]
size = Vector2(107, 42.5)

[sub_resource type="Animation" id="Animation_2ywvl"]
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordUpShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordDnShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordUp:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordDn:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordUp:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SwordDn:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}

[sub_resource type="Animation" id="Animation_acyd5"]
resource_name = "sword"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordUp:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordDn:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordUpShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordDnShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordUp:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SwordDn:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ploog"]
_data = {
"RESET": SubResource("Animation_2ywvl"),
"sword": SubResource("Animation_acyd5")
}

[node name="SwordScene" type="Node2D"]
script = ExtResource("1_lsqwb")

[node name="sword" type="Area2D" parent="." groups=["weapon"]]
collision_layer = 4
collision_mask = 2

[node name="SwordUpShape" type="CollisionShape2D" parent="sword"]
position = Vector2(0, -29.5)
shape = SubResource("RectangleShape2D_q3sbo")

[node name="SwordDnShape" type="CollisionShape2D" parent="sword"]
position = Vector2(0.5, 29.25)
shape = SubResource("RectangleShape2D_wm5bn")

[node name="SwordUp" type="Sprite2D" parent="sword"]
position = Vector2(-13, -3)
texture = ExtResource("1_femuq")
hframes = 6
vframes = 4
frame = 3

[node name="SwordDn" type="Sprite2D" parent="sword"]
position = Vector2(-13, -3)
texture = ExtResource("1_femuq")
hframes = 6
vframes = 4
frame = 15

[node name="AttackTimer" type="Timer" parent="sword"]
wait_time = 2.0

[node name="AnimationSword" type="AnimationPlayer" parent="sword"]
libraries = {
"": SubResource("AnimationLibrary_ploog")
}

[connection signal="timeout" from="sword/AttackTimer" to="." method="_on_attack_timer_timeout"]
